fix artist redis cache